# logic-pad-solver

./: .gitmodules  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  publish.yml  test.yml
solver/: Cargo.toml
solver/.cargo/: config.toml
solver/src/: lib.rs  puzzle.rs  shapes.rs  solver.rs
solver/util/: emcc
src/: App.tsx  board.tsx  jsonify.ts  solverBridge.d.ts  solverBridge.js  worker.ts
