[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[lib]
name = "solver"
crate-type = ["cdylib"]

[dependencies]
cspuz_core = { path = "../../cspuz_core/cspuz_core", default-features = false }
cspuz_rs = { path = "../../cspuz_core/cspuz_rs", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
